Day3/k8s/1-user.yaml
# =========================== user ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: default
  labels: { app: user }
spec:
  replicas: 2
  selector:
    matchLabels: { app: user }
  template:
    metadata:
      labels: { app: user }
    spec:
      containers:
        - name: user
          image: 637423625226.dkr.ecr.ap-northeast-2.amazonaws.com/apdev-product:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: default
spec:
  selector: { app: user }
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
