Day3/k8s/3-stress.yaml
# =========================== stress ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress
  namespace: default
  labels: { app: stress }
spec:
  replicas: 2
  selector:
    matchLabels: { app: stress }
  template:
    metadata:
      labels: { app: stress }
    spec:
      containers:
        - name: stress
          image: IMAGE_ACCOUNT.dkr.ecr.ap-northeast-2.amazonaws.com/apdev-stress:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "150m", memory: "128Mi" }
            limits:   { cpu: "800m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: stress
  namespace: default
spec:
  selector: { app: stress }
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
